# labclaw

./: .dockerignore  .gitignore  .mcp.json.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/agents/: agent-engineer.md  code-reviewer.md  discovery-engineer.md  edge-engineer.md  memory-engineer.md  neuro-specialist.md  platform-engineer.md  tech-lead.md
.claude/rules/: python-standards.md
.claude/skills/build-and-test/: SKILL.md
.claude/skills/data-format-adapter/: SKILL.md
.claude/skills/review-checklist/: SKILL.md
.claude/skills/run-edge-demo/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml  docs.yml  release.yml  security.yml
configs/: default.yaml
deploy/: Caddyfile  deploy.sh  labclaw.service
devices/_template/: MEMORY.md  SOUL.md
docs/: CNAME  agents.md  api-reference.md  architecture.md  awesome-ai-for-science.md  configuration.md  cookbook.md  deployment.md  index.md  memory-system.md  openclaw-extension.md  plugin-development.md  quickstart.md  roadmap.md  self-evolution.md
docs/migrations/: 2026-02-20-api-behavior-changes.md
docs/plans/: 2026-02-24-v004-foundation.md  2026-02-25-open-release-prep.md
docs/reference/: ci-cd.md  python-api.md
docs/specs/: L1-hardware.md  L2-gateway.md  L3-discovery.md  L3-engine.md  L3-optimization.md  L3-validation.md  L4-memory.md  L5-evolution.md  L5-persona.md  cross-events.md  cross-foundations.md  cross-graph-nodes.md
lab/: MEMORY.md  SOUL.md
members/_template/: MEMORY.md  SOUL.md
members/jarvis-intern/: MEMORY.md  SOUL.md
members/labclaw-intern/: MEMORY.md  SOUL.md
members/pi/: MEMORY.md  SOUL.md
members/shen/: MEMORY.md  SOUL.md
src/jarvis_mesh/: __init__.py
src/jarvis_mesh/core/: gateway.py  governance.py
src/jarvis_mesh/discovery/: __init__.py  hypothesis.py  mining.py  modeling.py  unsupervised.py
src/jarvis_mesh/hardware/: __init__.py  manager.py  registry.py  safety.py
src/jarvis_mesh/memory/: __init__.py  knowledge_graph.py  markdown.py  search.py  shared_blocks.py
src/jarvis_mesh/optimization/: __init__.py  approval.py  optimizer.py  proposal.py  safety.py
src/jarvis_mesh/validation/: __init__.py  cross_validation.py  provenance.py  report.py  statistics.py
src/labclaw/: __init__.py  cli.py  config.py  daemon.py  ingest.py  logging_config.py  recovery.py
src/labclaw/agents/: __init__.py  runtime.py  tools.py
src/labclaw/api/: __init__.py  app.py  deps.py  health_collector.py  middleware.py
src/labclaw/core/: __init__.py  evaluation.py  event_bus.py  events.py  gateway.py  governance.py  graph.py  proactive.py  safety.py  schemas.py  task_queue.py
src/labclaw/dashboard/: __init__.py  app.py
src/labclaw/demo/: __init__.py  generate.py  runner.py
src/labclaw/discovery/: __init__.py  hypothesis.py  mining.py  modeling.py  unsupervised.py
src/labclaw/edge/: __init__.py  cli.py  quality.py  sentinel.py  session_chronicle.py  watcher.py
src/labclaw/evolution/: __init__.py  engine.py  fitness.py  runner.py  schemas.py
src/labclaw/export/: __init__.py  nwb.py
src/labclaw/hardware/: __init__.py  manager.py  registry.py  safety.py  schemas.py
src/labclaw/llm/: __init__.py  provider.py
src/labclaw/mcp/: __init__.py  server.py
src/labclaw/memory/: __init__.py  dedup.py  knowledge_graph.py  markdown.py  search.py  session_memory.py  shared_blocks.py  sqlite_backend.py
src/labclaw/optimization/: __init__.py  approval.py  optimizer.py  proposal.py  safety.py
src/labclaw/orchestrator/: __init__.py  loop.py  steps.py
src/labclaw/persona/: __init__.py  manager.py  schemas.py
src/labclaw/plugins/: __init__.py  base.py  loader.py  registry.py  scaffold.py  sentinel.py
src/labclaw/validation/: __init__.py  cross_validation.py  provenance.py  report.py  statistics.py
tests/: conftest.py
tests/features/: conftest.py
tests/features/layer1_hardware/: device_registry.feature  hardware_drivers.feature  hardware_interfaces.feature  hardware_manager.feature  hardware_safety.feature  test_device_registry.py  test_hardware_drivers.py  test_hardware_interfaces.py  test_hardware_manager.py  test_hardware_safety.py
tests/features/layer2_infra/: api_endpoints.feature  api_security.feature  config.feature  event_bus.feature  gateway_registration.feature  misc_hardening.feature  pipeline_cli.feature  stability.feature  test_api_endpoints.py  test_api_security.py  test_config.py  test_event_bus.py  (+10 more)
tests/integration/: test_core_capabilities.py  test_crash_recovery.py  test_demo_runner.py  test_discovery_finding.py  test_evolution_cycles.py  test_evolution_persistence.py  test_full_pipeline.py  test_memory_persistence.py  test_memory_tiers.py  test_mvp_pipeline.py  test_orchestrator_evolution.py  test_paper_capabilities.py  test_provenance_chain.py
tests/unit/: test_agent_runtime.py  test_agent_runtime_coverage.py  test_agent_tools.py  test_agents_tools_extended.py  test_api_app.py  test_api_deps_coverage.py  test_api_provenance.py  test_api_routers_error_paths.py  test_api_routers_extended.py  test_api_routers_health_metrics.py  test_api_security.py  test_api_sessions_coverage.py  test_cli.py  test_cli_ablation.py  test_cli_export.py  test_cli_memory.py  test_cli_pipeline.py  test_cli_reproduce.py  test_concurrency.py  test_config.py  test_core_100.py  test_core_event_bus.py  test_core_events_extended.py  test_core_gateway.py  test_coverage_100.py  test_coverage_boost.py  test_daemon.py  test_daemon_accumulator.py  test_daemon_coverage.py  test_daemon_lifecycle.py  test_daemon_loops.py  test_dedup.py  test_discovery_hypothesis.py  test_discovery_hypothesis_full.py  test_discovery_mining_extended.py  test_discovery_mining_full.py  test_discovery_modeling.py  test_discovery_modeling_full.py  test_discovery_unsupervised.py  test_discovery_unsupervised_full.py  (+54 more)
(+146 files in other folders)
