[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labclaw"
version = "0.1.0"
description = "Distributed agentic architecture for self-documenting, self-improving neuroscience laboratories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Shen Lab" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "watchdog>=4.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.40.0",
    "redis>=5.0.0",
    "streamlit>=1.38.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-bdd>=7.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "scipy>=1.12.0",
]
science = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "scikit-optimize>=0.10.0",
    "statsmodels>=0.14.0",
    "umap-learn>=0.5.0",
]
nwb = [
    "pynwb>=2.8.0",
    "hdmf>=3.14.0",
    "neuroconv>=0.6.0",
]
memory = [
    "graphiti-core>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
labclaw = "labclaw.cli:main"
labclaw-edge = "labclaw.edge.cli:main"
labclaw-daemon = "labclaw.daemon:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
