[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labclaw"
version = "0.0.10"
description = "Distributed agentic architecture for self-documenting, self-improving neuroscience laboratories"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "LabClaw Team" },
]
keywords = ["neuroscience", "lab-automation", "scientific-method", "agentic-ai", "self-improving"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "watchdog>=4.0.0,<7.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "redis>=5.0.0,<6.0.0",
    "streamlit>=1.38.0,<2.0.0",
    "pyyaml>=6.0,<7.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "mcp>=1.0.0,<2.0.0",
    "numpy>=1.26.0,<3.0.0",
    "scipy>=1.12.0,<2.0.0",
    "plotly>=5.18.0,<10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-bdd>=7.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.6.0,<1.0.0",
    "mypy>=1.11,<2.0",
    "pre-commit>=4.0,<5.0",
    "build>=1.0,<2.0",
    "hypothesis>=6.100.0,<7.0.0",
    "bandit>=1.7.0,<2.0.0",
    "pip-audit>=2.7.0,<3.0.0",
    "safety>=3.0.0,<4.0.0",
    "commitizen>=3.0,<5.0",
]
science = [
    "scikit-learn>=1.4.0,<2.0.0",
    "scikit-optimize>=0.10.0,<1.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    "umap-learn>=0.5.0,<1.0.0",
]
ingest = [
    "h5py>=3.10.0",
    "pandas>=2.1.0",
    "tables>=3.9.0",
]
nwb = [
    "pynwb>=2.8.0",
    "hdmf>=3.14.0",
    "neuroconv>=0.6.0",
]
memory = [
    "graphiti-core>=0.5.0,<1.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
]
llm = [
    "litellm>=1.30,<3.0",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.urls]
Homepage = "https://labclaw.org"
Documentation = "https://labclaw.github.io/labclaw/"
Repository = "https://github.com/labclaw/labclaw"
Issues = "https://github.com/labclaw/labclaw/issues"
Changelog = "https://github.com/labclaw/labclaw/blob/main/CHANGELOG.md"

[project.scripts]
labclaw = "labclaw.cli:main"
labclaw-edge = "labclaw.edge.cli:main"
labclaw-daemon = "labclaw.daemon:main"
# labclaw-mcp entry point added when mcp package is installed (see PR #4)

[project.entry-points."labclaw.plugins"]
# Example: neuro = "labclaw_neuro:create_plugin"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Standard math notation (X, A, XtX) in linear algebra code
"src/labclaw/discovery/modeling.py" = ["N802", "N803", "N806"]
# sklearn import alias naming
"src/labclaw/discovery/unsupervised.py" = ["N811"]
# Standard math notation (X, A) in modeling tests
"tests/unit/test_discovery_modeling_full.py" = ["N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "e2e: marks end-to-end pipeline tests",
]

[tool.coverage.run]
source = ["labclaw"]
omit = [
    "*/tests/*",
    "*/demo/*",
    "*/dashboard/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "^\\s+\\.\\.\\.$",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.10"
version_files = ["pyproject.toml:project.version"]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
changelog_file = "CHANGELOG.md"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
